docs(readme): update readme with gh version